[gd_scene load_steps=8 format=3 uid="uid://cavv5dbltjqmp"]

[ext_resource type="Script" path="res://scenes/Menus/FinalScoreContainer.gd" id="1_7sdrp"]
[ext_resource type="LabelSettings" uid="uid://d0xafy67rfe8g" path="res://resources/labels/title1.tres" id="1_ik67g"]
[ext_resource type="LabelSettings" uid="uid://coadgxydvrogy" path="res://resources/labels/title2.tres" id="2_0woby"]
[ext_resource type="Texture2D" uid="uid://d0errkbubuqdv" path="res://assets/sprites/UI/map_gargano.png" id="2_djxmp"]
[ext_resource type="LabelSettings" uid="uid://csfqvnijlr80y" path="res://resources/labels/text2.tres" id="3_mg1wy"]
[ext_resource type="Theme" uid="uid://cy4ctfdd5em41" path="res://resources/buttons/button_theme.tres" id="4_r3b5x"]
[ext_resource type="StyleBox" uid="uid://by586e7gx5rdv" path="res://resources/buttons/new_style_box_texture.tres" id="5_poy3m"]

[node name="FinalScoreContainer" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7sdrp")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_djxmp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 51.0
offset_top = 33.0
offset_right = -54.0
offset_bottom = -257.0
theme_override_constants/separation = 10
alignment = 1

[node name="FinalScoreLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 60
text = "000"
label_settings = ExtResource("1_ik67g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalTrophyLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "Your trophy"
label_settings = ExtResource("2_0woby")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalTrophyDescriptionLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "A short description explaining your trophy"
label_settings = ExtResource("3_mg1wy")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FinalEvolutionsGridContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
alignment = 1

[node name="BackToMenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 724.0
offset_top = 891.0
offset_right = -724.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_r3b5x")
theme_override_colors/font_color = Color(0.439216, 0.176471, 0.00392157, 1)
theme_override_colors/font_pressed_color = Color(0.988235, 0.882353, 0.823529, 1)
theme_override_colors/font_hover_color = Color(0.756863, 0.368627, 0.054902, 1)
theme_override_colors/font_focus_color = Color(0.803922, 0.376471, 0.0470588, 1)
theme_override_styles/normal = ExtResource("5_poy3m")
theme_override_styles/hover = ExtResource("5_poy3m")
theme_override_styles/pressed = ExtResource("5_poy3m")
theme_override_styles/disabled = ExtResource("5_poy3m")
text = "Back to menu"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
